--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "test": "vitest",
+        "coverage": "vitest run --coverage"
     },
     "dependencies": {
         "@phosphor-icons/react": "^2.1.7",
+        "@testing-library/jest-dom": "^6.5.0",
         "axios": "^1.7.7",
         "dotenv": "^16.4.5",
         "next": "14.2.9",
@@ -18,15 +21,21 @@
         "react-dom": "^18"
     },
     "devDependencies": {
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/react": "^16.0.1",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@vitest/coverage-v8": "^2.1.1",
         "eslint": "^8",
         "eslint-config-next": "14.2.9",
+        "jsdom": "^25.0.0",
         "postcss": "^8",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "typescript": "^5",
+        "vitest": "^2.1.1"
     }
 }
